--- a/generator.html
+++ b/generator.html
@@ -6,7 +6,8 @@
 		<title>GRE Word Generator</title>
 		<meta name="description" content="GRE Word Generator">
 		<link rel="stylesheet" href="static/generator.css">
-		<script src="js/jquery-3.2.1.min.js"></script>
+		<script src="js/jquery2.min.js"></script>
+		<script src="js/jquery.mobile-1.4.5.min.js"></script>
 		<script src="js/generator.js"></script>
 	</head>
 
