Fix word deletion and add a progress bar to generator

--- a/generator.html
+++ b/generator.html
@@ -13,6 +13,16 @@
 
 	<body>
 
+		<div class="progress-wrapper">
+			<div class="progress-bar">
+				<span class="bar">
+					<span class="progress"></span>
+				</span>
+			</div>
+		</div>
+		<span class="progress-text"></span>
+
+
 		<div class="center">
 			<div class="wrapper">
 			</div>
